# extract-wish-url

./: Cargo.toml  README.md
.github/workflows/: build.yml  regression.yml  release.yml
src/: main.rs
