[package]
name = "extract-wish-url"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bstr = "1.10.0"
enum-assoc = "1.1.0"
env_logger = "0.11.5"
log = "0.4"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
strum = "0.26.3"
strum_macros = "0.26.4"
tempfile = "3.13.0"
# Add openssl with vendored to build ssl from source. This should fix cross compilation.
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
mockito = "1.5.0"
